# ai-video-maker

./: .env.example  .gitignore  CLAUDE.md  README.md  config.json  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
admin_ui/: index.html  package-lock.json  package.json  vite.config.js
admin_ui/src/: App.jsx  OrdersTab.jsx  ProjectDetail.jsx  ProjectsTab.jsx  api.js  main.jsx  ui.jsx
ai_video_maker/: __init__.py  cli.py  config.py  constants.py  errors.py  intake.py  logging_setup.py  models.py  options.py  retry.py  runner.py  server.py  state.py  storyboard_html.py  storyboard_md.py  summary.py  workspace.py
ai_video_maker/clients/: __init__.py  audio.py  cloudinary_client.py  download.py  fal.py  firebase_client.py  openai_client.py  video.py
ai_video_maker/media/: __init__.py  ffmpeg.py  images.py  letter.py
deploy/: PRODUCTION.md  cloudflared-config.example.yml  com.animoments.pipeline.plist  deploy.sh
tests/: conftest.py  test_cloudinary.py  test_config.py  test_firebase.py  test_intake.py  test_letter.py  test_media.py  test_models_and_workspace.py  test_options.py  test_retry.py  test_runner_logic.py  test_server_auth.py  test_server_watcher.py  test_state.py  test_transition_plans.py  test_video_resume.py
